--- a/work1.html
+++ b/work1.html
@@ -16,6 +16,8 @@
             git config --global user.name "Your Name"
         </li>
         <li>Git commit -m '작업설명'</li>
+        <li> remote add origin[별칭] git주소 : 파일 업로드 위치 지정</li>
+        <li>git push -u[처음 지정시 생략할 수 있도록 하는 옵션] origin master : 서버로 올리기</li>
     </ul>
 </body>
 </html>
