--- a/work1.html
+++ b/work1.html
@@ -10,6 +10,7 @@
     <ul>
         <li>Git : 파일 버전 관리 프로그램</li>
         <li>Git init : 지금 부터 나의 디렉토리의 파일을 관찰해라</li>
+        <li> WorkingStorage === Staging Ara === Repository === git Repository</li>
         <li>Git Add : 작업 파일을 추적하라고 지시한다.</li>
         <li>commit 하기전 맨 처음에 자신이 누구인지 알려준다 <br>
             git config --global user.email "you@example.com"
