--- a/work1.html
+++ b/work1.html
@@ -11,10 +11,11 @@
         <li>Git : 파일 버전 관리 프로그램</li>
         <li>Git init : 지금 부터 나의 디렉토리의 파일을 관찰해라</li>
         <li> WorkingStorage === Staging Ara === Repository === git Repository</li>
-        <li>Git Add : 작업 파일을 추적하라고 지시한다.</li>
+        <li>Git Add . : 작업 파일을 추적하라고 지시한다.</li>
         <li>commit 하기전 맨 처음에 자신이 누구인지 알려준다 <br>
             git config --global user.email "you@example.com"
             git config --global user.name "Your Name"
+            [맨처음 지정시에만]
         </li>
         <li>Git commit -m '작업설명'</li>
         <li> remote add origin[별칭] git주소 : 파일 업로드 위치 지정</li>
